# latch

./: .gitignore  CLAUDE.md  CMakeLists.txt
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: AboutApp.tsx  ChopApp.tsx  ChopRegionOverlay.tsx  ExtractApp.tsx  PlaybackContext.tsx  SettingsApp.tsx  VideoPreview.tsx  VideoView.tsx  Waveform.tsx  aboutWindow.ts  chopAudition.tsx  chopRegions.ts  chopWindow.ts  dialogWindows.ts  dragChipPng.ts  formats.ts  frontendLog.ts  imageAnalysis.ts  internalDragHandoff.ts  latheStatus.ts  liveLoopFlush.ts  macDragChipPng.ts  main.tsx  modKey.ts  nativeVideoStream.ts  platform.ts  playbackEngine.ts  settings.ts  settingsWindow.ts  styles.css  useCanvasViewport.ts  useChopRegions.ts  videoAudio.ts  videoReverse.ts  videoStub.tsx  videoTransport.ts
gui/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/coredist/: .gitkeep
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: audio.rs  audio_decode.rs  chop.rs  cookie_prefs.rs  cursor.rs  drag_overlay.rs  lib.rs  logger.rs  mac_input.rs  mac_video.rs  main.rs  os_drag.rs  peaks.rs  registry.rs  settings.rs  tools.rs  touchpad_raw_input.rs  video_stream_server.rs
src/: bootstrap.cpp  bootstrap.h  clip.cpp  clip.h  download.cpp  download.h  extract.cpp  extract.h  main.cpp  paths.cpp  paths.h  process.cpp  process.h  progress.cpp  progress.h
tools/: build-release-mac.sh  build-release.ps1  fetch-ffmpeg.ps1  fetch-ytdlp.ps1
