[package]
name = "latch-gui"
version = "0.1.1"
description = "Latch — URL audio/video extractor"
authors = ["skxllflower"]
edition = "2021"

[lib]
name = "latch_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Second launch focuses the running window instead of spawning a twin.
tauri-plugin-single-instance = "2"
# Chop-window audition engine: cpal output + wav decode + resampling +
# seek/position, owned by a dedicated thread (see src/audio.rs). WAV-only
# decode — the chop pipeline always auditions a WAV it produced itself.
# WAV decode for the chop audition deck; the video deck takes PCM from
# `lathe stream-audio` instead of decoding containers itself.
rodio = { version = "0.20", default-features = false, features = ["wav"] }
log = "0.4"
# Native drag-source for dragging files OUT into Explorer / DAWs —
# wraps DoDragDrop / NSDraggingSource / XDND (see os_drag.rs).
drag = "2"
# OS-level keyboard polling for the drag chip's modifier state —
# DoDragDrop's modal pump blocks JS keydown during a drag.
device_query = "2"

# Job Objects tie every spawned latch.exe (and its yt-dlp/ffmpeg
# children, by job inheritance) to this process's lifetime — same
# orphan prevention WAVdesk uses (see src/job_object.rs). GDI + COM/
# Shell features back the native drag chip.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  # Raw HID touchpad input (pinch/pan in the chop window) — see
  # touchpad_raw_input.rs.
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_UI_Input",
] }
