[package]
name = "latch-gui"
version = "0.1.3"
description = "Latch — URL audio/video extractor"
authors = ["skxllflower"]
edition = "2021"

[lib]
name = "latch_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
# Second launch focuses the running window instead of spawning a twin.
tauri-plugin-single-instance = "2"
# Chop-window audition engine: cpal output + wav decode + resampling +
# seek/position, owned by a dedicated thread (see src/audio.rs). WAV-only
# decode — the chop pipeline always auditions a WAV it produced itself.
# Audition decode: symphonia gives the chop deck AND the Extract output
# fold-out all-format decode (mp3 / m4a-aac / flac / ogg-vorbis / wav / …),
# not just WAV — the fold-out audition was dead for the compressed formats
# Latch actually outputs. The video deck still takes PCM from
# `lathe stream-audio` instead of decoding containers itself.
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }
log = "0.4"
# Native drag-source for dragging files OUT into Explorer / DAWs —
# wraps DoDragDrop / NSDraggingSource / XDND (see os_drag.rs).
# Vendored (byte copy of WAVdesk's patched drag 2.1.0): carries the
# performed drop-effect, and — round 21 — an ASYNC-capable data object
# (IDataObjectAsyncCapability) so a shell paste's "Replace or Skip Files"
# prompt can never wedge DoDragDrop (and with it the whole UI thread).
# Keep byte-identical with wavdesk/gui/src-tauri/vendor/drag.
drag = { path = "vendor/drag" }
# OS-level keyboard polling for the drag chip's modifier state —
# DoDragDrop's modal pump blocks JS keydown during a drag.
device_query = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

# Job Objects tie every spawned latch.exe (and its yt-dlp/ffmpeg
# children, by job inheritance) to this process's lifetime — same
# orphan prevention WAVdesk uses (see src/job_object.rs). GDI + COM/
# Shell features back the native drag chip.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  # GetAsyncKeyState — the OS-drag stale gate + watchdog read the physical
  # mouse button state around DoDragDrop (os_drag.rs, ported from WAVdesk).
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  # Raw HID touchpad input (pinch/pan in the chop window) — see
  # touchpad_raw_input.rs.
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_UI_Input",
] }
